there was some zoom issue - fixed font size aat 18px

--- a/index.html
+++ b/index.html
@@ -28,9 +28,30 @@
             <div class="card" data-link="https://github.com/Rishi-Bidani/CloudSync" data-id="1" data-aos="fade-up">
                 <div class="card-title">Cloud Sync</div>
                 <div class="card-body">
-                    This program will allow you to host your own cloud. It will let you to watch a folder on your computer and upload those files
-                    directly to the cloud. The goal is to create something similar to google drive's desktop client
+                    <div class="card-body-content">
+                        This program will allow you to host your own cloud. It will let you to watch a folder on your computer and upload those files
+                        directly to the cloud. The goal is to create something similar to google drive's desktop client
+                    </div>
+                    <br>
+                    <div class="card-body-content">
+                        <div class="icon-flex">
+                            <span class="icon">
+                                <img src="./assets/vue.png" alt="Vue-Logo">| Vue
+                            </span>
+                            <span class="icon">
+                                <img src="./assets/html5.png" alt="Html5-Logo">| HTML5
+                            </span>
+                            <span class="icon">
+                                <img src="./assets/css.png" alt="CSS3-Logo">| CSS3
+                            </span>
+                            <span class="icon">
+                                <img src="./assets/nodejs.png" alt="CSS3-Logo">| NodeJS
+                            </span>
+                        </div>
+                    </div>
+
                 </div>
+                <div class="card-footer">⭐stars 4</div>
             </div>
             <!-- Card 2 -->
             <div class="card" class="card" data-link="https://github.com/Rishi-Bidani/local-cloud" data-id="2" data-aos="fade-up">
@@ -54,7 +75,7 @@
                                 <img src="./assets/css.png" alt="CSS3-Logo">| CSS3
                             </span>
                             <span class="icon">
-                                <img src="./assets/javascript.png" alt="CSS3-Logo">| JavaScript
+                                <img src="./assets/nodejs.png" alt="CSS3-Logo">| NodeJS
                             </span>
                         </div>
                     </div>
