--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                             <span class="icon">
                                 <img src="./assets/nodejs.png" alt="CSS3-Logo">| NodeJS
                             </span>
+                            <span class="icon">
+                                <img src="./assets/golang.png" alt="CSS3-Logo">| Golang
+                            </span>
                         </div>
                     </div>
 
