--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <hr>
         <h1 class="title">Technologies-Languages I have Used</h1>
-        <div class="techstack">
+        <div class="techstack" data-aos="flip-up">
             <img src="./assets/icons8-javascript.svg" alt="" class="techstack-item"
                  title="JavaScript">
             <img src="./assets/icons8-html-5.svg" alt="" class="techstack-item" title="HTML5">
@@ -66,7 +66,9 @@
         <h1 class="title">Some of my Projects</h1>
 
     </main>
-
+    <script>
+        AOS.init()
+    </script>
 </body>
 
 </html>
