Forgot to add local cloud github link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="./assets/icons8-golang.svg" alt="" class="tech-item" title="Golang">
                 </div>
             </div>
-            <div class="card" data-link="">
+            <div class="card" data-link="https://github.com/Rishi-Bidani/local-cloud">
                 <div class="card-title">
                     Local Cloud
                     <div class="spacer"></div>
