What I plan to learn added

--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
             </div>
             </div>
         </section>
+        <hr>
+        <h1 class="title">What I plan to learn</h1>
+        <section class="learn-techstack" data-aos="flip-up">
+            <img src="./assets/icons8-kotlin.svg" class="techstack-item" title="Kotlin"
+                 alt="Kotlin">
+            <img src="./assets/icons8-android-os.svg" class="techstack-item" title="Android"
+                 alt="Android">
+        </section>
     </main>
     <script>
         AOS.init()
