using github api to fetch my stars, previously hardcoded

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                  stroke-miterlimit="10"
                                  points="  259.216,29.942 330.27,173.919 489.16,197.007 374.185,309.08 401.33,467.31 259.216,392.612 117.104,467.31 144.25,309.08   29.274,197.007 188.165,173.919 " />
                     </svg>
-                    4
+                    <span class="github--stars" data-github-repo-id="383441043"></span>
                 </div>
                 <div class="card-body">
                     This program will allow you to host your own cloud. It will let you to watch a
@@ -112,7 +112,7 @@
                                  stroke-miterlimit="10"
                                  points="  259.216,29.942 330.27,173.919 489.16,197.007 374.185,309.08 401.33,467.31 259.216,392.612 117.104,467.31 144.25,309.08   29.274,197.007 188.165,173.919 " />
                     </svg>
-                    61
+                    <span class="github--stars" data-github-repo-id="363732850"></span>
                 </div>
                 <div class="card-body">
                     Using this program you can convert any computer into a home server for
